# Xcalux

./: .gitignore  AGENTS.md  README.md  bigplane.md  cargo.toml  implementation_plan01  old_left_panel.txt  system_documentation.md
.cargo/: config.toml
hokusai-0.2.0/hokusai-0.2.0/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
hokusai-0.2.0/hokusai-0.2.0/.github/workflows/: ci.yml  pages.yml  release.yml
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-brush/: Cargo.toml
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-brush/src/: lib.rs
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-compat/: Cargo.toml
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-compat/examples/: debug_dabs.rs
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-compat/fixtures/: brush_pressure_ramp.json  brush_short_stab.json  calligraphy_slow_drag.json  calligraphy_wave.json  charcoal_circle.json  charcoal_fast_flick.json  charcoal_ramp.json  marker_curved.json  marker_horizontal.json
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-compat/src/: lib.rs
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-compat/tests/: continuity.rs  snapshots.rs
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-core/: Cargo.toml
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-core/src/: brush.rs  brushmodes.rs  color.rs  evaluator.rs  fix15.rs  input.rs  lib.rs  mapping.rs  rng.rs  setting.rs  spectral.rs  state.rs  stroke.rs  surface.rs  tile.rs
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-tile-mem/: Cargo.toml
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-tile-mem/src/: lib.rs
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-tile-mem/tests/: draw_dab.rs
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-tiny-skia/: Cargo.toml
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-tiny-skia/src/: lib.rs
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-tiny-skia/tests/: parity_with_compat.rs
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-wasm/: Cargo.toml
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-wasm/demo/: README.md  index.html
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-wasm/src/: lib.rs
hokusai-0.2.0/hokusai-0.2.0/crates/hokusai-wasm/tests/: api.rs
hokusai-0.2.0/hokusai-0.2.0/hokusai/: Cargo.toml
hokusai-0.2.0/hokusai-0.2.0/hokusai/examples/: myb_to_png.rs  stroke_to_png.rs
hokusai-0.2.0/hokusai-0.2.0/hokusai/examples/fixtures/: README.md
hokusai-0.2.0/hokusai-0.2.0/hokusai/src/: lib.rs
hokusai-0.2.0/hokusai-0.2.0/scripts/: regenerate-goldens.sh  setup-parity.sh
hokusai-0.2.0/hokusai-0.2.0/tools/libmypaint-render/: Makefile  render.c
hokusai-0.2.0/hokusai-0.2.0/xtask/: Cargo.toml
hokusai-0.2.0/hokusai-0.2.0/xtask/src/: main.rs
src/: app.rs  brush_io.rs  canvas.rs  commands.rs  diagnostics.rs  history.rs  input.rs  main.rs  preferences.rs  pressure.rs  renderer.rs  save.rs  shortcuts.rs  stress_test.rs  vector.rs
src/export/: jpeg.rs  mod.rs  ora.rs  png.rs
src/shaders/: blending.wgsl
src/tools/: fill.rs  mod.rs  selection.rs  transform.rs
src/ui/: brush_panel.rs  command_palette.rs  diagnostics.rs  dialogs.rs  layout.rs  left_panel.rs  menu.rs  mod.rs  quick_bar.rs  right_panel.rs  status_bar.rs
