[workspace]
resolver = "2"
members = [
    "crates/hokusai-core",
    "crates/hokusai-brush",
    "crates/hokusai-tile-mem",
    "crates/hokusai-tiny-skia",
    "crates/hokusai-compat",
    "crates/hokusai-wasm",
    "hokusai",
    "xtask",
]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/reearth/hokusai"
version = "0.2.0"
authors = ["Re:Earth and contributors"]
keywords = ["brush", "painting", "libmypaint", "mypaint", "wasm"]
categories = ["graphics", "rendering", "multimedia::images", "wasm"]

[workspace.dependencies]
hokusai-core = { version = "0.2.0", path = "crates/hokusai-core" }
hokusai-brush = { version = "0.2.0", path = "crates/hokusai-brush" }
hokusai-tile-mem = { version = "0.2.0", path = "crates/hokusai-tile-mem" }
hokusai-tiny-skia = { version = "0.2.0", path = "crates/hokusai-tiny-skia" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
